samples/_failures_safe/1761608470_98eb70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d9e98c1.c: In function ‘main’:
./samples/SAFE/__tmp_1d9e98c1.c:134:13: error: expected declaration or statement at end of input
  134 |             printf("Invalid log format: %s\n", line);
      |             ^~~~~~
./samples/SAFE/__tmp_1d9e98c1.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d9e98c1.c:134:13: error: expected declaration or statement at end of input
